fixed rounded corners on safari

--- a/client/src/scss/contact.scss
+++ b/client/src/scss/contact.scss
@@ -17,7 +17,8 @@
             width: 100%;
             min-height: 10rem;
             font-size: 1rem;
-
+            border-radius: 0;
+            -webkit-border-radius: 0;
             @media (max-width: 40rem){
                 min-height: 6rem;
                 &::placeholder{
@@ -43,6 +44,8 @@
                 font-size: 1rem;
                 padding: 0.6rem 0.8rem;
                 border: 1.5px solid grey;
+                border-radius: 0;
+                -webkit-border-radius: 0;
                 @media (max-width: 40rem){
                     font-size: 16px !important; //fixed the scrolling thingables
                 }
